--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
                     <a
                         href="https://geboren.am/"
                         target="_blank"
-                        class="geborenam-page"
+                        class="geborenam-page link-buttons"
                     >
                         geborenam-page
                     </a>
                     <a
                         href="https://de.wikipedia.org/wiki/John_Lennon"
                         target="_blank"
-                        class="wikipedia-page"
+                        class="wikipedia-page link-buttons"
                     >
                         wikipedia-page
                     </a>
                     <a
                         href="https://open.spotify.com/artist/4x1nvY2FN8jxqAFA0DA02H?si=zb2AbnLZQJic8lL-mjbF1g"
                         target="_blank"
-                        class="spotify-page"
+                        class="spotify-page link-buttons"
                     >
                         spotify-page
                     </a>
