--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>John Lennon Portfolio</title>
+        <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/structure.css" />
-        <link rel="stylesheet" href="css/debugging-colors.css" />
+        <!-- <link rel="stylesheet" href="css/debugging-colors.css" /> -->
         <link rel="stylesheet" href="css/global.css" />
     </head>
     <body>
@@ -29,21 +30,21 @@
                         target="_blank"
                         class="geborenam-page link-buttons"
                     >
-                        geborenam-page
+                        geboren.am
                     </a>
                     <a
                         href="https://de.wikipedia.org/wiki/John_Lennon"
                         target="_blank"
                         class="wikipedia-page link-buttons"
                     >
-                        wikipedia-page
+                        WIKIPEDIA
                     </a>
                     <a
                         href="https://open.spotify.com/artist/4x1nvY2FN8jxqAFA0DA02H?si=zb2AbnLZQJic8lL-mjbF1g"
                         target="_blank"
                         class="spotify-page link-buttons"
                     >
-                        spotify-page
+                        SPOTIFY
                     </a>
                 </nav>
             </header>
