added icons to buttons

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>John Lennon Portfolio</title>
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/structure.css" />
+        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="/css/structure.css" />
         <!-- <link rel="stylesheet" href="css/debugging-colors.css" /> -->
-        <link rel="stylesheet" href="css/global.css" />
+        <link rel="stylesheet" href="/css/global.css" />
     </head>
     <body>
         <div class="master-container">
@@ -18,7 +18,7 @@
                     class="logo"
                 >
                     <img
-                        src="resources/images/icon_face.png"
+                        src="/resources/images/icon_face.png"
                         alt="icon"
                         class="logo-icon"
                     />
@@ -37,6 +37,11 @@
                         target="_blank"
                         class="wikipedia-page link-buttons"
                     >
+                        <img
+                            src="/resources/images/icon_wikipedia.png"
+                            alt=""
+                            class="wikipedia-icon"
+                        />
                         WIKIPEDIA
                     </a>
                     <a
@@ -44,6 +49,11 @@
                         target="_blank"
                         class="spotify-page link-buttons"
                     >
+                        <img
+                            src="/resources/images/icon_spotify.png"
+                            alt=""
+                            class="spotify-icon"
+                        />
                         SPOTIFY
                     </a>
                 </nav>
