added animations to header-bar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>John Lennon Portfolio</title>
         <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="/css/animations.css" />
         <link rel="stylesheet" href="/css/structure.css" />
         <!-- <link rel="stylesheet" href="css/debugging-colors.css" /> -->
         <link rel="stylesheet" href="/css/global.css" />
@@ -15,7 +16,7 @@
                 <a
                     href="https://geboren.am/person/john-lennon"
                     target="_blank"
-                    class="logo"
+                    class="logo hvr-underline-from-center"
                 >
                     <img
                         src="/resources/images/icon_face.png"
@@ -28,14 +29,14 @@
                     <a
                         href="https://geboren.am/"
                         target="_blank"
-                        class="geborenam-page link-buttons"
+                        class="geborenam-page link-buttons hvr-bounce-to-right-geborenam"
                     >
                         geboren.am
                     </a>
                     <a
                         href="https://de.wikipedia.org/wiki/John_Lennon"
                         target="_blank"
-                        class="wikipedia-page link-buttons"
+                        class="wikipedia-page link-buttons hvr-bounce-to-right-wikipedia"
                     >
                         <img
                             src="/resources/images/icon_wikipedia.png"
@@ -47,7 +48,7 @@
                     <a
                         href="https://open.spotify.com/artist/4x1nvY2FN8jxqAFA0DA02H?si=zb2AbnLZQJic8lL-mjbF1g"
                         target="_blank"
-                        class="spotify-page link-buttons"
+                        class="spotify-page link-buttons hvr-bounce-to-right-spotify"
                     >
                         <img
                             src="/resources/images/icon_spotify.png"
