--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                     </a>
                 </nav>
             </header>
-            <div class="introduction-container">
-                <img
-                    src="/resources/images/john_lennon_sculpture.jpg"
-                    alt=""
-                    class="introduction-image"
-                />
+            <div class="introduction-container hvr-grow">
                 <p class="introduction-text">
+                    <img
+                        src="/resources/images/john_lennon_sculpture.jpg"
+                        alt=""
+                        class="introduction-image"
+                    />
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                     diam nonumy eirmod tempor invidunt ut labore et dolore magna
                     aliquyam erat, sed diam voluptua. At vero eos et accusam et
