added content to footer with width issue

--- a/index.html
+++ b/index.html
@@ -714,7 +714,31 @@
                     commodo
                 </aside>
             </main>
-            <footer class="footer-container">footer-container</footer>
+            <footer class="footer-container">
+                <div class="content-sources">
+                    <p class="geborenam-source">
+                        Quelle für den Inhalt von
+                        <a
+                            href="https://geboren.am/person/john-lennon"
+                            class="source-links"
+                            >geboren.am</a
+                        >
+                    </p>
+                    <p class="image-sources">
+                        Alle Illustrationen sind uncopyrighted und somit auf
+                        <a href="https://pixabay.com/de/" class="source-links"
+                            >pixabay</a
+                        >
+                        oder
+                        <a
+                            href="https://www.pexels.com/de-de/"
+                            class="source-links"
+                            >pexels</a
+                        >
+                        zu finden.
+                    </p>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
