fixed tab bug for footer

--- a/index.html
+++ b/index.html
@@ -457,19 +457,25 @@
                         <a
                             href="https://geboren.am/person/john-lennon"
                             class="source-links"
+                            target="_blank"
                         >
                             geboren.am
                         </a>
                     </p>
                     <p class="image-sources">
                         Alle Illustrationen sind uncopyrighted und somit auf
-                        <a href="https://pixabay.com/de/" class="source-links">
+                        <a
+                            href="https://pixabay.com/de/"
+                            class="source-links"
+                            target="_blank"
+                        >
                             pixabay
                         </a>
                         oder
                         <a
                             href="https://www.pexels.com/de-de/"
                             class="source-links"
+                            target="_blank"
                             >pexels</a
                         >
                         zu finden.
