--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>John Lennon Portfolio</title>
+        <link rel="stylesheet" href="/css/colors.css" />
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="stylesheet" href="/css/animations.css" />
         <link rel="stylesheet" href="/css/structure.css" />
