--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div class="autogramm-container">
-                        <div class="autogramm-text">Lennon's-Autgramm</div>
+                        <h2 class="autogramm-text">Lennon's-Autgramm</h2>
                         <img
                             src="https://img.geboren.am/unterschrift/john-lennon,330.jpg"
                             alt="John Lennon's Autogramm"
