--- a/index.html
+++ b/index.html
@@ -60,35 +60,22 @@
                     </a>
                 </nav>
             </header>
-            <div class="introduction-container hvr-grow">
+            <div class="introduction-container">
                 <p class="introduction-text">
                     <img
                         src="/resources/images/john_lennon_sculpture.jpg"
                         alt=""
                         class="introduction-image"
                     />
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-                    nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-                    nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet. Duis
-                    autem vel eum iriure dolor in hendrerit in vulputate velit
-                    esse molestie consequat, vel illum dolore eu feugiat nulla
-                    facilisis at vero eros et accumsan et iusto odio dignissim
-                    qui blandit praesent luptatum zzril delenit augue duis
-                    dolore te feugait nulla facilisi. Lorem ipsum dolor sit
-                    amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut
+                    John Winston Lennon war ein britischer Musiker, Sänger und
+                    Gitarrist, der als Mitgründer der „Beatles“ Musikgeschichte
+                    schrieb und mit Songs wie „I Feel Fine“ (1964), „Strawberry
+                    Fields Forever“ (1967), „Instant Karma!“ (1970) und
+                    „Imagine“ (1971) als einer der erfolgreichsten
+                    Pop-Komponisten gilt. Er wurde am 9. Oktober 1940 in
+                    Liverpool in England geboren und starb mit 40 Jahren am 8.
+                    Dezember 1980 in New York City. In diesem Jahr wäre er 82
+                    Jahre alt geworden.
                 </p>
             </div>
             <main class="main-container">
