added music-note SVG

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                         target="_blank"
                         class="geborenam-page link-buttons hvr-bounce-to-right-geborenam"
                     >
+                        <object
+                            data="/resources/svg/music_note_black_24dp.svg"
+                            class="music-note"
+                        ></object>
                         geboren.am
                     </a>
                     <a
