added new containers to the aside
In this commit I added new containers to the aside
There's a birth/death location and some links that might be relevant

--- a/index.html
+++ b/index.html
@@ -251,110 +251,44 @@
                     </div>
                 </div>
                 <aside class="aside">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-                    nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-                    nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet. Duis
-                    autem vel eum iriure dolor in hendrerit in vulputate velit
-                    esse molestie consequat, vel illum dolore eu feugiat nulla
-                    facilisis at vero eros et accumsan et iusto odio dignissim
-                    qui blandit praesent luptatum zzril delenit augue duis
-                    dolore te feugait nulla facilisi. Lorem ipsum dolor sit
-                    amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut laoreet dolore magna aliquam erat
-                    volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci
-                    tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-                    commodo consequat. Duis autem vel eum iriure dolor in
-                    hendrerit in vulputate velit esse molestie consequat, vel
-                    illum dolore eu feugiat nulla facilisis at vero eros et
-                    accumsan et iusto odio dignissim qui blandit praesent
-                    luptatum zzril delenit augue duis dolore te feugait nulla
-                    facilisi. Nam liber tempor cum soluta nobis eleifend option
-                    congue nihil imperdiet doming id quod mazim placerat facer
-                    possim assum. Lorem ipsum dolor sit amet, consectetuer
-                    adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                    minim veniam, quis nostrud exerci tation ullamcorper
-                    suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                    Duis autem vel eum iriure dolor in hendrerit in vulputate
-                    velit esse molestie consequat, vel illum dolore eu feugiat
-                    nulla facilisis. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
-                    sit amet, consetetur sadipscing elitr, sed diam nonumy
-                    eirmod tempor invidunt ut labore et dolore magna aliquyam
-                    erat, sed diam voluptua. At vero eos et accusam et justo duo
-                    dolores et ea rebum. Stet clita kasd gubergren, no sea
-                    takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
-                    dolor sit amet, consetetur sadipscing elitr, At accusam
-                    aliquyam diam diam dolore dolores duo eirmod eos erat, et
-                    nonumy sed tempor et et invidunt justo labore Stet clita ea
-                    et gubergren, kasd magna no rebum. sanctus sea sed takimata
-                    ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-                    nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat. Consetetur sadipscing elitr, sed diam nonumy
-                    eirmod tempor invidunt ut labore et dolore magna aliquyam
-                    erat, sed diam voluptua. At vero eos et accusam et justo duo
-                    dolores et ea rebum. Stet clita kasd gubergren, no sea
-                    takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
-                    dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                    eirmod tempor invidunt ut labore et dolore magna aliquyam
-                    erat, sed diam voluptua. At vero eos et accusam et justo duo
-                    dolores et ea rebum. Stet clita kasd gubergren, no sea
-                    takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
-                    dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                    eirmod tempor invidunt ut labore et dolore magna aliquyam
-                    erat, sed diam voluptua. At vero eos et accusam et justo duo
-                    dolores et ea rebum. Stet clita kasd gubergren, no sea
-                    takimata sanctus. Lorem ipsum dolor sit amet, consetetur
-                    sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At
-                    vero eos et accusam et justo duo dolores et ea rebum. Stet
-                    clita kasd gubergren, no sea takimata sanctus est Lorem
-                    ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-                    sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At
-                    vero eos et accusam et justo duo dolores et ea rebum. Stet
-                    clita kasd gubergren, no sea takimata sanctus est Lorem
-                    ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-                    sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At
-                    vero eos et accusam et justo duo dolores et ea rebum. Stet
-                    clita kasd gubergren, no sea takimata sanctus est Lorem
-                    ipsum dolor sit amet. Duis autem vel eum iriure dolor in
-                    hendrerit in vulputate velit esse molestie consequat, vel
-                    illum dolore eu feugiat nulla facilisis at vero eros et
-                    accumsan et iusto odio dignissim qui blandit praesent
-                    luptatum zzril delenit augue duis dolore te feugait nulla
-                    facilisi. Lorem ipsum dolor sit amet, consectetuer
-                    adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                    minim veniam, quis nostrud exerci tation ullamcorper
-                    suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                    Duis autem vel eum iriure dolor in hendrerit in vulputate
-                    velit esse molestie consequat, vel illum dolore eu feugiat
-                    nulla facilisis at vero eros et accumsan et iusto odio
-                    dignissim qui blandit praesent luptatum zzril delenit augue
-                    duis dolore te feugait nulla facilisi. Nam liber tempor cum
-                    soluta nobis eleifend option congue nihil imperdiet doming
-                    id quod mazim placerat facer possim assum. Lorem ipsum dolor
-                    sit amet, consectetuer adipiscing elit, sed diam nonummy
-                    nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-                    volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci
-                    tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-                    commodo
+                    <div class="geburtsort-container">
+                        <h3 class="ueberschrift">Geburstort/Sterbeort</h3>
+                        <h1 class="ortsname">Liverpool, England</h1>
+                        <img
+                            src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyC0QJpPAxLetkeQ0njIxYWX0sx2i-dLO1s&size=336x200&language=de&maptype=terrain&markers=color:0xcd388c%7Csize:mid%7C53.4108,-2.97784&markers=color:0x333333%7Csize:mid%7C40.7144,-74.006&sensor=false"
+                            alt="Geburstort und Sterbeort"
+                        />
+                        <p class="geburtsort-text">
+                            John Lennon wurde in Liverpool in England geboren
+                            und starb in New York City.
+                        </p>
+                    </div>
+                    <div class="weblinks-container">
+                        <h2 class="weblinks-titel">Lennon im Web</h2>
+                        <p class="weblinks-text">
+                            Ausgewählte Links zu Webseiten mit biographischen
+                            Informationen über John Lennon:
+                        </p>
+                        <a href="http://www.johnlennon.com/" class="homepage"
+                            >johnlennon.com – Offizielle Homepage von John
+                            Lennon
+                        </a>
+                        <a
+                            href="https://www1.wdr.de/stichtag/stichtag4554.html"
+                            class="wdr-stichtag"
+                            >WDR Stichtag: John Lennon – Musikalischer
+                            Friedensapostel
+                        </a>
+                        <a
+                            href="https://kalenderblatt.de/index.php?what=thmanu&manu_id=732"
+                            class="dw-kalenderblatt"
+                            >DW Kalenderblatt: John Lennon ermordet (08.12.1980)
+                        </a>
+                        <a href="https://twitter.com/JohnLennon" class="twitter"
+                            >Twitter: @JohnLennon – Offizielles Profil von John
+                            Lennon
+                        </a>
+                    </div>
                 </aside>
             </main>
             <footer class="footer-container">
