--- a/index.html
+++ b/index.html
@@ -254,13 +254,14 @@
                     <div class="geburtsort-container">
                         <h3 class="ueberschrift">Geburstort/Sterbeort</h3>
                         <h1 class="ortsname">Liverpool, England</h1>
-                        <img
-                            src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyC0QJpPAxLetkeQ0njIxYWX0sx2i-dLO1s&size=336x200&language=de&maptype=terrain&markers=color:0xcd388c%7Csize:mid%7C53.4108,-2.97784&markers=color:0x333333%7Csize:mid%7C40.7144,-74.006&sensor=false"
-                            alt="Geburstort und Sterbeort"
-                        />
                         <p class="geburtsort-text">
                             John Lennon wurde in Liverpool in England geboren
-                            und starb in New York City.
+                            und starb in New York City. <br />
+                            Als er sein Apartment in Manhattan betreten wollte,
+                            wurde er vier Mal von Mark David Chapman mit einem
+                            .38-Kaliber Revolver getroffen. Lennon starb in der
+                            Ambulanz auf dem Weg zum Spital aufgrunde von
+                            starken Blutungen.
                         </p>
                     </div>
                     <div class="weblinks-container">
@@ -269,25 +270,32 @@
                             Ausgewählte Links zu Webseiten mit biographischen
                             Informationen über John Lennon:
                         </p>
-                        <a href="http://www.johnlennon.com/" class="homepage"
-                            >johnlennon.com – Offizielle Homepage von John
-                            Lennon
-                        </a>
-                        <a
-                            href="https://www1.wdr.de/stichtag/stichtag4554.html"
-                            class="wdr-stichtag"
-                            >WDR Stichtag: John Lennon – Musikalischer
-                            Friedensapostel
-                        </a>
-                        <a
-                            href="https://kalenderblatt.de/index.php?what=thmanu&manu_id=732"
-                            class="dw-kalenderblatt"
-                            >DW Kalenderblatt: John Lennon ermordet (08.12.1980)
-                        </a>
-                        <a href="https://twitter.com/JohnLennon" class="twitter"
-                            >Twitter: @JohnLennon – Offizielles Profil von John
-                            Lennon
-                        </a>
+                        <div class="links-container">
+                            <a
+                                href="http://www.johnlennon.com/"
+                                class="homepage weblink"
+                                >johnlennon.com – Offizielle Homepage von John
+                                Lennon
+                            </a>
+                            <a
+                                href="https://www1.wdr.de/stichtag/stichtag4554.html"
+                                class="wdr-stichtag weblink"
+                                >WDR Stichtag: John Lennon – Musikalischer
+                                Friedensapostel
+                            </a>
+                            <a
+                                href="https://kalenderblatt.de/index.php?what=thmanu&manu_id=732"
+                                class="dw-kalenderblatt weblink"
+                                >DW Kalenderblatt: John Lennon ermordet
+                                (08.12.1980)
+                            </a>
+                            <a
+                                href="https://twitter.com/JohnLennon"
+                                class="twitter weblink"
+                                >Twitter: @JohnLennon – Offizielles Profil von
+                                John Lennon
+                            </a>
+                        </div>
                     </div>
                 </aside>
             </main>
