--- a/index.html
+++ b/index.html
@@ -342,6 +342,16 @@
                         >
                         zu finden.
                     </p>
+                    <p class="github footer-contents">
+                        Der ganze Source-Code ist 
+                        <a
+                            href="https://github.com/mnaray/John_Lennon_Portfolio"
+                            class="source-links"
+                            target="_blank"
+                            >hier</a
+                        >
+                        auf GitHub zu finden. (wird auf public gestellt am 08.03.2022)
+                    </p>
                 </div>
             </footer>
         </div>
